--- a/hoe-house/html/WEB-INF/web.xml
+++ b/hoe-house/html/WEB-INF/web.xml
@@ -27,4 +27,13 @@
 		</auth-constraint>
 	</security-constraint>
 
+	<security-constraint>
+		<web-resource-collection>
+			<url-pattern>/hoe/cron/*</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>admin</role-name>
+		</auth-constraint>
+	</security-constraint>
+
 </web-app>
