--- a/hoe-house/html/WEB-INF/web.xml
+++ b/hoe-house/html/WEB-INF/web.xml
@@ -43,4 +43,24 @@
 		</auth-constraint>
 	</security-constraint>
 
+	<servlet>
+		<servlet-name>remote-api</servlet-name>
+		<servlet-class>com.google.apphosting.utils.remoteapi.RemoteApiServlet</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>remote-api</servlet-name>
+		<url-pattern>/_ah/remote_api</url-pattern>
+	</servlet-mapping>
+
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>remoteapi</web-resource-name>
+			<url-pattern>/_ah/remote_api</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>admin</role-name>
+		</auth-constraint>
+	</security-constraint>
+	
 </web-app>
